Fix regression caused by SSL enhancements in JDK11 rel packet sizing
Adapt fragment output size to Socket params to fix SSL errors
caused by permissive SSLSocket OutputStream.